Added more to style.css and added undertale image.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
+  <!--Heads up! Some of the styling for this website is in the style.css file. -->
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>replit</title>
+    <title>Full Site</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    Hello world
-    <script src="script.js"></script>
+	  <!--Using the text-glow class from style.css ...-->
+    <div class="text-glow">
+		  <h1>My Favorite Game:</h1>
+	  </div>
+    <img class="centerclass"src="https://ksr-ugc.imgix.net/assets/011/533/904/f58978f175eba8065d1b5afe4545876d_original.png?ixlib=rb-4.0.2&crop=faces&w=1552&h=873&fit=crop&v=1463684109&auto=format&frame=1&q=92&s=e3cc8b22a13b5f5efcf34ad2793dac51">
+    
   </body>
 </html>
