Changed old Logo, added opening header, first paragraph.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <!--Heads up! Some of the styling for this website is in the style.css file. -->
+  <!--Heads up! Some of the styling for this website is in the style.css file. Because I hate
+  inline CSS.
+  -->
+  <!---->
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -11,8 +14,11 @@
 	  <!--Using the text-glow class from style.css ...-->
     <div class="text-glow">
 		  <h1>My Favorite Game:</h1>
-	  </div>
-    <img class="centerclass"src="https://ksr-ugc.imgix.net/assets/011/533/904/f58978f175eba8065d1b5afe4545876d_original.png?ixlib=rb-4.0.2&crop=faces&w=1552&h=873&fit=crop&v=1463684109&auto=format&frame=1&q=92&s=e3cc8b22a13b5f5efcf34ad2793dac51">
-    
+    </div>
+    <img class="centerclass"src="media\logo.png" alt="Undertale">
+    <h2 align=center>A website made with ❤️ by Peyton Majoue</h2>
+    <br>
+    <h1 class="white" font-family="underfont">Why I love undertale:</h1>
+    <p>Firstly, I <i>love</i> the characters. This game has some of the most loveable characters I've ever played in. Each character feels different and new, and you really don't know what to expect when talking to anyone.</p>
   </body>
 </html>
