--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <h2 align=center>A website made with ❤️ by Peyton Majoue</h2>
     <br>
     <h1 class="white" font-family="underfont">Why I love undertale:</h1>
-    <p>Firstly, I <i>love</i> the characters. This game has some of the most loveable characters I've ever played in. Each character feels different and new, and you really don't know what to expect when talking to anyone.</p>
+    <ul></ul>
+    <p>Firstly, I <i>love</i> the characters. This game has some of the most loveable characters I've ever played in. Each character feels different and new, and you really don't know what to expect when talking to anyone. The skeleton you start fighting today might be your friend tomorrow. It's clear the game's developer Toby Fox put a "skele-ton" amount of work into it.</p>
+    <h1>Some of my favorite characters:</h3>
+    <img src="media\papyrus.gif">
+    <p style="float: left; padding: 10px">Papyrus:<br><br> We first meet this skeleton in Snowy Snowdin and he is intent on capturing <br> a human in order to be a part of the Royal Guard so that he can finally be <br>popular and have friends.</p>
   </body>
 </html>
