Added undyne, and started her description

--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <!--Heads up! Some of the styling for this website is in the style.css file. Because I hate
-  inline CSS.
-  -->
-  <!---->
+<!--Heads up, a good amount of the CSS is in the style.css file.-->
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Full Site</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
+  <body style="background-image: url('undertalebackground.jpg');">
 	  <!--Using the text-glow class from style.css ...-->
     <div class="text-glow">
 		  <h1>My Favorite Game:</h1>
@@ -22,7 +19,14 @@
     <ul></ul>
     <p>Firstly, I <i>love</i> the characters. This game has some of the most loveable characters I've ever played in. Each character feels different and new, and you really don't know what to expect when talking to anyone. The skeleton you start fighting today might be your friend tomorrow. It's clear the game's developer Toby Fox put a "skele-ton" amount of work into it.</p>
     <h1>Some of my favorite characters:</h3>
+    <h2>Papyrus:</h2>
     <img src="media\papyrus.gif">
-    <p style="float: left; padding: 10px">Papyrus:<br><br> We first meet this skeleton in Snowy Snowdin and he is intent on capturing <br> a human in order to be a part of the Royal Guard so that he can finally be <br>popular and have friends.</p>
+    <p style="float: left;">We first meet this skeleton in Snowy Snowdin and he is intent on capturing <br> a human in order to be a part of the Royal Guard so that he can finally be <br>popular and have friends.</p>
+  <h2>Undyne:</h2>
+  <img src="media\Undyne.png" width=100px style="padding:20px">
+  <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of armor, she pursues the protagonist through the entirety of Waterfall a city in the world of undertale</p>
+  
+  
+  
   </body>
 </html>
