--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Full Site</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body style="background-image: url('undertalebackground.jpg');">
+  <body style="background-image: url('media/undertalebackground.jpg');">
 	  <!--Using the text-glow class from style.css ...-->
     <div class="text-glow">
 		  <h1>My Favorite Game:</h1>
@@ -23,8 +23,8 @@
     <img src="media\papyrus.gif">
     <p style="float: left;">We first meet this skeleton in Snowy Snowdin and he is intent on capturing <br> a human in order to be a part of the Royal Guard so that he can finally be <br>popular and have friends.</p>
   <h2>Undyne:</h2>
-  <img src="media\Undyne.png" width=100px style="padding:20px">
-  <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of armor, she pursues the protagonist through the entirety of Waterfall a city in the world of undertale</p>
+  <img src="media\Undyne.png" width=100px">
+  <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of<br> armor, she pursues the protagonist through the entirety of Waterfall a city <br>in the world of undertale</p>
   
   
   
