--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <!--Heads up, a good amount of the CSS is in the style.css file.-->
+<!--Checklist[✅]:
+1. Three different web pages that are linked together: Home, Media, and Contact.
+2. At least five paragraph elements.
+3. Header elements to structure the pages.
+4. At least five images.
+5. At least five links (this does not include the links to your own pages).
+6. At least five pieces of media (videos or audio).
+7. At least one table with relevant data included.
+8. A "Contact" form with at least three different input types.
+9. At least one ordered list and one unordered list.
+-->
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -15,18 +26,14 @@
     <img class="centerclass"src="media\logo.png" alt="Undertale">
     <h2 align=center>A website made with ❤️ by Peyton Majoue</h2>
     <br>
-    <h1 class="white" font-family="underfont">Why I love undertale:</h1>
-    <ul></ul>
+    <h1>Why I love undertale:</h1>
     <p>Firstly, I <i>love</i> the characters. This game has some of the most loveable characters I've ever played in. Each character feels different and new, and you really don't know what to expect when talking to anyone. The skeleton you start fighting today might be your friend tomorrow. It's clear the game's developer Toby Fox put a "skele-ton" amount of work into it.</p>
     <h1>Some of my favorite characters:</h3>
     <h2>Papyrus:</h2>
     <img src="media\papyrus.gif">
     <p style="float: left;">We first meet this skeleton in Snowy Snowdin and he is intent on capturing <br> a human in order to be a part of the Royal Guard so that he can finally be <br>popular and have friends.</p>
-  <h2>Undyne:</h2>
-  <img src="media\Undyne.png" width=100px">
-  <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of<br> armor, she pursues the protagonist through the entirety of Waterfall a city <br>in the world of undertale</p>
-  
-  
-  
+    <h2>Undyne:</h2>
+    <img src="media\Undyne.png" width=100px">
+    <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of<br> armor, she pursues the protagonist through the entirety of Waterfall a city <br>in the world of undertale</p>
   </body>
 </html>
