--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 7. At least one table with relevant data included.
 8. A "Contact" form with at least three different input types.
 9. At least one ordered list and one unordered list.
--->
+Hello from another account!
+  -->
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Full Site</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body style="background-image: url('media/undertalebackground.jpg');">
+  <body>
 	  <!--Using the text-glow class from style.css ...-->
     <div class="text-glow">
 		  <h1>My Favorite Game:</h1>
@@ -31,9 +32,10 @@
     <h1>Some of my favorite characters:</h3>
     <h2>Papyrus:</h2>
     <img src="media\papyrus.gif">
-    <p style="float: left;">We first meet this skeleton in Snowy Snowdin and he is intent on capturing <br> a human in order to be a part of the Royal Guard so that he can finally be <br>popular and have friends.</p>
+    <p style="float: left;">We first meet this skeleton in the snowy slopes of Snowdin and he is intent on capturing <br> a human in order to be a part of the Royal Guard so that he can finally be <br>popular and have friends.</p>
     <h2>Undyne:</h2>
     <img src="media\Undyne.png" width=100px">
     <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of<br> armor, she pursues the protagonist through the entirety of Waterfall a city <br>in the world of undertale</p>
+    
   </body>
 </html>
