Actually added sections, I don't know why the previous push didn't work.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@ Hello from another account!
     <h2 align=center>A website made with ❤️ by Peyton Majoue</h2>
     <br>
     <h1>Why I love undertale:</h1>
+    <h3 class="yellow">The Characters:</h3>
     <p>Firstly, I <i>love</i> the characters. This game has some of the most loveable characters I've ever played in. Each character feels different and new, and you really don't know what to expect when talking to anyone. The skeleton you start fighting today might be your friend tomorrow. It's clear the game's developer Toby Fox put a "skele-ton" amount of work into it.</p>
+    <h3 class="yellow">The Story:</h3>
+    <p>The story is simply amazing. Every litle detail is so well thought out and super well written. It makes casual actions such as saving a basis for the entire story.</p>
     <h1>Some of my favorite characters:</h3>
     <h2>Papyrus:</h2>
     <img src="media\papyrus.gif">
