Cleaned up unnecessary CSS classes, added media.html advertisement. Added some colors to certain words similar to how they would appear in game.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Hello from another account!
     <title>Full Site</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
+  <body class="indexbody">
 	  <!--Using the text-glow class from style.css ...-->
     <div class="text-glow">
 		  <h1>My Favorite Game:</h1>
@@ -27,11 +27,13 @@ Hello from another account!
     <img class="centerclass"src="media\logo.png" alt="Undertale">
     <h2 align=center>A website made with ❤️ by Peyton Majoue</h2>
     <br>
-    <h1>Why I love undertale:</h1>
+    <h1>Why I love <span style="color:red">UNDERTALE:</span></h1>
     <h3 class="yellow">The Characters:</h3>
     <p>Firstly, I <i>love</i> the characters. This game has some of the most loveable characters I've ever played in. Each character feels different and new, and you really don't know what to expect when talking to anyone. The skeleton you start fighting today might be your friend tomorrow. It's clear the game's developer Toby Fox put a "skele-ton" amount of work into it.</p>
     <h3 class="yellow">The Story:</h3>
-    <p>The story is simply amazing. Every litle detail is so well thought out and super well written. It makes casual actions such as saving a basis for the entire story.</p>
+    <p>The story is simply amazing. Every litle detail is so well thought out and super well written. It makes casual actions such as saving a basis for the entire story. Even naming your CHARACTER is filled with jokes and future refrences.</p>
+    <h3 class="yellow"'>The Gameplay:</h3>
+    <p>This is one of the few RPG games I've seen you have a choice to fight or spare your opponents life. You can make friends with any opponent you fight, this makes for a really intresting play concept.</p>
     <h1>Some of my favorite characters:</h3>
     <h2>Papyrus:</h2>
     <img src="media\papyrus.gif">
@@ -39,6 +41,10 @@ Hello from another account!
     <h2>Undyne:</h2>
     <img src="media\Undyne.png" width=100px">
     <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of<br> armor, she pursues the protagonist through the entirety of Waterfall a city <br>in the world of undertale</p>
-    
+    <div class="mediaadvert">
+      <br>
+      <p align=center>Want to see more of what <span style="color: red">UNDERTALE</span> looks like? Click <a href="/media.html" style="color: yellow">HERE</a> to see some more pictures and videos of UNDERTALE</p>
+      <br>
+    </div>
   </body>
 </html>
