--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <!--Heads up, a good amount of the CSS is in the style.css file.-->
 <!--Checklist[✅]:
-1. Three different web pages that are linked together: Home, Media, and Contact.
-2. At least five paragraph elements.
-3. Header elements to structure the pages.
+1.✅ Three different web pages that are linked together: Home, Media, and Contact.
+2.✅ At least five paragraph elements.
+3.✅ Header elements to structure the pages.
 4. At least five images.
 5. At least five links (this does not include the links to your own pages).
 6. At least five pieces of media (videos or audio).
@@ -29,22 +29,31 @@ Hello from another account!
     <br>
     <h1>Why I love <span style="color:red">UNDERTALE:</span></h1>
     <h3 class="yellow">The Characters:</h3>
+    <div id="Opening">
     <p>Firstly, I <i>love</i> the characters. This game has some of the most loveable characters I've ever played in. Each character feels different and new, and you really don't know what to expect when talking to anyone. The skeleton you start fighting today might be your friend tomorrow. It's clear the game's developer Toby Fox put a "skele-ton" amount of work into it.</p>
     <h3 class="yellow">The Story:</h3>
-    <p>The story is simply amazing. Every litle detail is so well thought out and super well written. It makes casual actions such as saving a basis for the entire story. Even naming your CHARACTER is filled with jokes and future refrences.</p>
+    <p>The story is simply amazing. Every litle detail is so well thought out and super well written. It makes casual actions such as saving a basis for the entire story. Even naming your character  is filled with jokes and future refrences.</p>
     <h3 class="yellow"'>The Gameplay:</h3>
     <p>This is one of the few RPG games I've seen you have a choice to fight or spare your opponents life. You can make friends with any opponent you fight, this makes for a really intresting play concept.</p>
-    <h1>Some of my favorite characters:</h3>
-    <h2>Papyrus:</h2>
-    <img src="media\papyrus.gif">
-    <p style="float: left;">We first meet this skeleton in the snowy slopes of Snowdin and he is intent on capturing <br> a human in order to be a part of the Royal Guard so that he can finally be <br>popular and have friends.</p>
-    <h2>Undyne:</h2>
-    <img src="media\Undyne.png" width=100px">
-    <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of<br> armor, she pursues the protagonist through the entirety of Waterfall a city <br>in the world of undertale</p>
+    </div>
+    <div id="Characters">
+      <h1>Some of my favorite characters:</h3>
+      <h2>Papyrus:</h2>
+      <img src="media\papyrus.gif">
+      <p style="float: left;">We first meet this skeleton in the snowy slopes of Snowdin and he is intent on capturing <br> a human in order to be a part of the Royal Guard so that he can finally be <br>popular and have friends.</p>
+      <h2>Undyne:</h2>
+      <img src="media\Undyne.png" width=100px">
+      <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of<br> armor, she pursues the protagonist through the entirety of Waterfall a city <br>in the world of undertale</p>
+    </div>
     <div class="mediaadvert">
       <br>
-      <p align=center>Want to see more of what <span style="color: red">UNDERTALE</span> looks like? Click <a href="/media.html" style="color: yellow">HERE</a> to see some more pictures and videos of UNDERTALE</p>
+      <p align=center>Want to see more of what <span style="color: red">UNDERTALE</span> looks like? Click <a href="/media.html" style="color: yellow">HERE</a> to see some more pictures and videos of <span style="color:red">UNDERTALE</span></p>
       <br>
+      <p align="center">Do you love <span style="color: red">UNDERTALE</span> as much as I do? Click <a href="/contact.html"style="color: yellow">HERE</a> to join the *UnderNet, a community of <span style="color:red">UNDERTALE</span> lovers.</p>
+  </div>
+  <div class="disclaimer">
+      <h6>*All rights and assets belonging to UNDERTALE are property of Toby Fox. This was just a school project involving me using my HTML skills and in no way claims any ownership of assets used.</h6>
+    <h6>*The UnderNet is a fictional social website in the world of UNDERTALE and cannot actually be joined.</h6>
     </div>
   </body>
 </html>
