Did most of the contact form.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 1.✅ Three different web pages that are linked together: Home, Media, and Contact.
 2.✅ At least five paragraph elements.
 3.✅ Header elements to structure the pages.
-4. At least five images.
+4.✅ At least five images.
 5. At least five links (this does not include the links to your own pages).
 6. At least five pieces of media (videos or audio).
-7. At least one table with relevant data included.
-8. A "Contact" form with at least three different input types.
+7.✅ At least one table with relevant data included.
+8.✅ A "Contact" form with at least three different input types.
 9. At least one ordered list and one unordered list.
-Hello from another account!
   -->
   <head>
     <meta charset="utf-8">
@@ -28,9 +27,10 @@ Hello from another account!
     <h2 align=center>A website made with ❤️ by Peyton Majoue</h2>
     <br>
     <h1>Why I love <span style="color:red">UNDERTALE:</span></h1>
-    <h3 class="yellow">The Characters:</h3>
+    
     <div id="Opening">
-    <p>Firstly, I <i>love</i> the characters. This game has some of the most loveable characters I've ever played in. Each character feels different and new, and you really don't know what to expect when talking to anyone. The skeleton you start fighting today might be your friend tomorrow. It's clear the game's developer Toby Fox put a "skele-ton" amount of work into it.</p>
+      <h3 class="yellow">The Characters:</h3>
+      <p>Firstly, I <i>love</i> the characters. This game has some of the most loveable characters I've ever played in. Each character feels different and new, and you really don't know what to expect when talking to anyone. The skeleton you start fighting today might be your friend tomorrow. It's clear the game's developer Toby Fox put a "skele-ton" amount of work into it.</p>
     <h3 class="yellow">The Story:</h3>
     <p>The story is simply amazing. Every litle detail is so well thought out and super well written. It makes casual actions such as saving a basis for the entire story. Even naming your character  is filled with jokes and future refrences.</p>
     <h3 class="yellow"'>The Gameplay:</h3>
@@ -44,6 +44,7 @@ Hello from another account!
       <h2>Undyne:</h2>
       <img src="media\Undyne.png" width=100px">
       <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of<br> armor, she pursues the protagonist through the entirety of Waterfall a city <br>in the world of undertale</p>
+      <h2></h2>
     </div>
     <div class="mediaadvert">
       <br>
@@ -51,7 +52,7 @@ Hello from another account!
       <br>
       <p align="center">Do you love <span style="color: red">UNDERTALE</span> as much as I do? Click <a href="/contact.html"style="color: yellow">HERE</a> to join the *UnderNet, a community of <span style="color:red">UNDERTALE</span> lovers.</p>
   </div>
-  <div class="disclaimer">
+    <div class="disclaimer">
       <h6>*All rights and assets belonging to UNDERTALE are property of Toby Fox. This was just a school project involving me using my HTML skills and in no way claims any ownership of assets used.</h6>
     <h6>*The UnderNet is a fictional social website in the world of UNDERTALE and cannot actually be joined.</h6>
     </div>
