--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h2>Undyne:</h2>
       <img src="media\Undyne.png" width=100px">
       <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of<br> armor, she pursues the protagonist through the entirety of Waterfall a city <br>in the world of undertale</p>
-      <h2></h2>
+      <h2>Nabstablook:</h2>
     </div>
     <div class="mediaadvert">
       <br>
