--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
     <div class="mediaadvert">
       <br>
-      <p align=center>Want to see more of what <span style="color: red">UNDERTALE</span> looks like? Click <a href="/full-site/media.html" style="color: yellow">HERE</a> to see some more pictures and videos of <span style="color:red">UNDERTALE</span></p>
+      <p align=center>Want to see more of what <span style="color: red">UNDERTALE</span> looks like? Click <a href="/media.html" style="color: yellow">HERE</a> to see some more pictures and videos of <span style="color:red">UNDERTALE</span></p>
       <br>
-      <p align="center">Do you love <span style="color: red">UNDERTALE</span> as much as I do? Click <a href="/full-site/contact.html"style="color: yellow">HERE</a> to join the *UnderNet, a community of <span style="color:red">UNDERTALE</span> lovers.</p>
+      <p align="center">Do you love <span style="color: red">UNDERTALE</span> as much as I do? Click <a href="/contact.html"style="color: yellow">HERE</a> to join the *UnderNet, a community of <span style="color:red">UNDERTALE</span> lovers.</p>
   </div>
     <div class="disclaimer">
       <h6>*All rights and assets belonging to UNDERTALE are property of Toby Fox. This was just a school project involving me using my HTML skills and in no way claims any ownership of assets used.</h6>
