--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <img src="media\Undyne.png" width=100px">
       <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of<br> armor, she pursues the protagonist through the entirety of Waterfall a city <br>in the world of undertale</p>
       <h2>Nabstablook:</h2>
+      <img src="media\Nabstatwo.png">
     </div>
     <div class="mediaadvert">
       <br>
