--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of<br> armor, she pursues the protagonist through the entirety of Waterfall a city <br>in the world of undertale</p>
       <h2>Nabstablook:</h2>
       <img src="media\Nabstatwo.png">
+      <p style="float: left;">Nabstablook is a sad ghost that can be found in the RUINs and in Waterfall.<br>He's super nice and very intresting to hang out with. He also cries acid tears <br>and of course can't be killed.</p>
     </div>
     <div class="mediaadvert">
       <br>
