Fixed a lot of programming errors.
Not closing tags etc.

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <body class="undernetbody">
     <div class="mediaadvert">
     <h1 class="yellow" align=center>Welcome to the UnderNet!</h1>
-    <h4 align=center>Sign up to CONTACT your friends and other UNDERTALE fans.</h2>
+    <h4 align=center>Sign up to CONTACT your friends and other UNDERTALE fans.</h4>
     <div id="signsheet">
       <form align="center">
         <fieldset class="signsheet">
@@ -18,7 +18,7 @@
           <input type="text" name="signup" id="user">
           <br>
           <label for="pass">New Password:</label>
-          <input type="password" id="pass"></input>
+          <input type="password" id="pass">
           <br>
           <label for="notarobot">"I am not a robot."</label>
           <input type="checkbox" id="notarobot" name="signup">
@@ -44,11 +44,11 @@
    </tr>
     <tr>
       <td>Napstablook22</td>
-      <td><img src="\media\Nabstablook.gif"</td>
+      <td><img src="\media\Nabstablook.gif"></td>
     </tr>
     <tr>
       <td>Strongifsh91</td>
-      <td><img src="\media\undyneimg.png"></img></td>
+      <td><img src="\media\undyneimg.png"></td>
     </tr>
 </tbody> 
 
