--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="text-glow">
 		  <h1>My Favorite Game:</h1>
     </div>
-    <img class="centerclass"src="media\logo.png" alt="Undertale">
+    <img class="centerclass" src="media\logo.png" alt="Undertale">
     <h2 align=center>A website made with ❤️ by Peyton Majoue</h2>
     <br>
     <h1>Why I love <span style="color:red">UNDERTALE:</span></h1>
@@ -33,11 +33,11 @@
       <p>Firstly, I <i>love</i> the characters. This game has some of the most loveable characters I've ever played in. Each character feels different and new, and you really don't know what to expect when talking to anyone. The skeleton you start fighting today might be your friend tomorrow. It's clear the game's developer Toby Fox put a "skele-ton" amount of work into it.</p>
     <h3 class="yellow">The Story:</h3>
     <p>The story is simply amazing. Every litle detail is so well thought out and super well written. It makes casual actions such as saving a basis for the entire story. Even naming your character  is filled with jokes and future refrences.</p>
-    <h3 class="yellow"'>The Gameplay:</h3>
+    <h3 class="yellow">The Gameplay:</h3>
     <p>This is one of the few RPG games I've seen you have a choice to fight or spare your opponents life. You can make friends with any opponent you fight, this makes for a really intresting play concept.</p>
     </div>
     <div id="Characters">
-      <h1>Some of my favorite characters:</h3>
+      <h3>Some of my favorite characters:</h3>
       <h2>Papyrus:</h2>
       <img src="media\papyrus.gif">
       <p style="float: left;">We first meet this skeleton in the snowy slopes of Snowdin and he is intent on capturing <br> a human in order to be a part of the Royal Guard so that he can finally be <br>popular and have friends.</p>
@@ -52,7 +52,7 @@
       <br>
       <p align=center>Want to see more of what <span style="color: red">UNDERTALE</span> looks like? Click <a href="/media.html" style="color: yellow">HERE</a> to see some more pictures and videos of <span style="color:red">UNDERTALE</span></p>
       <br>
-      <p align="center">Do you love <span style="color: red">UNDERTALE</span> as much as I do? Click <a href="/contact.html"style="color: yellow">HERE</a> to join the *UnderNet, a community of <span style="color:red">UNDERTALE</span> lovers.</p>
+      <p align="center">Do you love <span style="color: red">UNDERTALE</span> as much as I do? Click <a href="/contact.html" style="color: yellow">HERE</a> to join the *UnderNet, a community of <span style="color:red">UNDERTALE</span> lovers.</p>
   </div>
     <div class="disclaimer">
       <h6>*All rights and assets belonging to UNDERTALE are property of Toby Fox. This was just a school project involving me using my HTML skills and in no way claims any ownership of assets used.</h6>
