--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <div class="mediaadvert">
     <h1 class="yellow" align=center>Welcome to the UnderNet!</h1>
     <h4 align=center>Sign up to CONTACT your friends and other UNDERTALE fans.</h4>
+    <!--The form can be found here::-->
     <div id="signsheet">
       <form align="center">
         <fieldset class="signsheet">
@@ -29,7 +30,7 @@
     </form>
     </div>
     <h2 align="center">Join users like...</h2>
-    
+<!--The table can be found here.-->
 <table align="center"> 
   <thead> 
     <tr> 
@@ -40,15 +41,15 @@
   <tbody> 
     <tr> 
       <td>Coolskeleton95</td>
-      <td><img src="\media\papyrusimg.png"></td>
+      <td><img src="media\papyrusimg.png"></td>
    </tr>
     <tr>
       <td>Napstablook22</td>
-      <td><img src="\media\Nabstablook.gif"></td>
+      <td><img src="media\Nabstablook.gif"></td>
     </tr>
     <tr>
       <td>Strongifsh91</td>
-      <td><img src="\media\undyneimg.png"></td>
+      <td><img src="media\undyneimg.png"></td>
     </tr>
 </tbody> 
 
