--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <br>
       <p align=center>Want to see more of what <span style="color: red">UNDERTALE</span> looks like? Click <a href="/media.html" style="color: yellow">HERE</a> to see some more pictures and videos of <span style="color:red">UNDERTALE</span></p>
       <br>
+      <!--Anchors to the other websites can be found here:-->
       <p align="center">Do you love <span style="color: red">UNDERTALE</span> as much as I do? Click <a href="/contact.html" style="color: yellow">HERE</a> to join the *UnderNet, a community of <span style="color:red">UNDERTALE</span> lovers.</p>
   </div>
     <div class="disclaimer">
