Started on Media added Navigation links at the bottom and tops of all pages to help navigate.

--- a/contact.html
+++ b/contact.html
@@ -7,27 +7,31 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="undernetbody">
-    <div class="mediaadvert">
-    <h1 class="yellow" align=center>Welcome to the UnderNet!</h1>
-    <h4 align=center>Sign up to CONTACT your friends and other UNDERTALE fans.</h4>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="media.html">Media</a> |
+    </nav>
+    <div class="border">
+      <h1 class="yellow" align=center>Welcome to the UnderNet!</h1>
+      <h4 align=center>Sign up to CONTACT your friends and other UNDERTALE fans.</h4>
     <!--The form can be found here::-->
-    <div id="signsheet">
-      <form align="center">
-        <fieldset class="signsheet">
-          <legend>UnderNet Sign-Up</legend>
-          <label for="user">New Username:</label>
-          <input type="text" name="signup" id="user">
-          <br>
-          <label for="pass">New Password:</label>
-          <input type="password" id="pass">
-          <br>
-          <label for="notarobot">"I am not a robot."</label>
-          <input type="checkbox" id="notarobot" name="signup">
-          <br>
-          <br>
-          <input type="submit" id="submitsignsheet" name="signup">
-        </fieldset>
-    </form>
+      <div id="signsheet">
+        <form align="center">
+          <fieldset class="signsheet">
+            <legend>UnderNet Sign-Up</legend>
+            <label for="user">New Username:</label>
+            <input type="text" name="signup" id="user">
+            <br>
+            <label for="pass">New Password:</label>
+            <input type="password" id="pass">
+            <br>
+            <label for="notarobot">"I am not a robot."</label>
+            <input type="checkbox" id="notarobot" name="signup">
+            <br>
+            <br>
+            <input type="submit" id="submitsignsheet" name="signup">
+          </fieldset>
+      </form>
     </div>
     <h2 align="center">Join users like...</h2>
 <!--The table can be found here.-->
