--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="indexbody">
-	  <!--Using the text-glow class from style.css ...-->
+
+    <!--Using the text-glow class from style.css ...-->
     <div class="text-glow">
 		  <h1>My Favorite Game:</h1>
     </div>
@@ -37,7 +38,7 @@
     <p>This is one of the few RPG games I've seen you have a choice to fight or spare your opponents life. You can make friends with any opponent you fight, this makes for a really intresting play concept.</p>
     </div>
     <div id="Characters">
-      <h3>Some of my favorite characters:</h3>
+      <h1>Some of my favorite characters:</h1>
       <h2>Papyrus:</h2>
       <img src="media\papyrus.gif">
       <p style="float: left;">We first meet this skeleton in the snowy slopes of Snowdin and he is intent on capturing <br> a human in order to be a part of the Royal Guard so that he can finally be <br>popular and have friends.</p>
@@ -48,7 +49,7 @@
       <img src="media\Nabstatwo.png">
       <p style="float: left;">Nabstablook is a sad ghost that can be found in the RUINs and in Waterfall.<br>He's super nice and very intresting to hang out with. He also cries acid tears <br>and of course can't be killed.</p>
     </div>
-    <div class="mediaadvert">
+    <div class="border">
       <br>
       <p align=center>Want to see more of what <span style="color: red">UNDERTALE</span> looks like? Click <a href="media.html" style="color: yellow">HERE</a> to see some more pictures and videos of <span style="color:red">UNDERTALE</span></p>
       <br>
@@ -59,5 +60,9 @@
       <h6>*All rights and assets belonging to UNDERTALE are property of Toby Fox. This was just a school project involving me using my HTML skills and in no way claims any ownership of assets used.</h6>
     <h6>*The UnderNet is a fictional social website in the world of UNDERTALE and cannot actually be joined.</h6>
     </div>
+    <nav align="center">
+      <a href="media.html">Media</a> |
+      <a href="contact.html">Contact</a> 
+    </nav>
   </body>
 </html>
