--- a/media.html
+++ b/media.html
@@ -6,8 +6,18 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="undernetbody">
-    <form>
-      
-    </form>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="contact.html">Contact</a> |
+    </nav>
+    <h1 class="yellow" align="center">See the Trailer of Undertale:</h1>
+    <div class="border">
+      <center>
+        <video video controls autoplay>
+          <source src="media/undertaletrailer.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </center>
+    </div>
   </body>
 </html>
