Added BOSS fight example and Ruins

--- a/media.html
+++ b/media.html
@@ -19,5 +19,9 @@
         </video>
       </center>
     </div>
+	<h3>Just a regular boss fight in the world of <span style="color: red">UNDERTALE</span>...</h3>
+	  <iframe width="560" height="315" src="https://www.youtube.com/embed/8jmptY4uCkk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<h3 align="right">Here is a video showcasing some of the RUINs, <br>an ancient place in UNDERTALE</h3>
+	<iframe align="right" width="560" height="315" src="https://www.youtube.com/embed/r3yrAy0ffNo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
