--- a/index.html
+++ b/index.html
@@ -30,25 +30,29 @@
     <h1>Why I love <span style="color:red">UNDERTALE:</span></h1>
     
     <div id="Opening">
-      <h3 class="yellow">The Characters:</h3>
-      <p>Firstly, I <i>love</i> the characters. This game has some of the most loveable characters I've ever played in. Each character feels different and new, and you really don't know what to expect when talking to anyone. The skeleton you start fighting today might be your friend tomorrow. It's clear the game's developer Toby Fox put a "skele-ton" amount of work into it.</p>
-    <h3 class="yellow">The Story:</h3>
-    <p>The story is simply amazing. Every litle detail is so well thought out and super well written. It makes casual actions such as saving a basis for the entire story. Even naming your character  is filled with jokes and future refrences.</p>
-    <h3 class="yellow">The Gameplay:</h3>
-    <p>This is one of the few RPG games I've seen you have a choice to fight or spare your opponents life. You can make friends with any opponent you fight, this makes for a really intresting play concept.</p>
+      <ol>
+        <li class="yellow"><h3 class="yellow">The Characters:</h3></li>
+        <p>Firstly, I <i>love</i> the characters. This game has some of the most loveable characters I've ever played in. Each character feels different and new, and you really don't know what to expect when talking to anyone. The skeleton you start fighting today might be your friend tomorrow. It's clear the game's developer Toby Fox put a "skele-ton" amount of work into it.</p>
+      <li class="yellow"><h3 class="yellow">The Story:</h3></li>
+      <p>The story is simply amazing. Every litle detail is so well thought out and super well written. It makes casual actions such as saving a basis for the entire story. Even naming your character  is filled with jokes and future refrences.</p>
+      <li class="yellow"><h3 class="yellow">The Gameplay:</h3></li>
+      <p>This is one of the few RPG games I've seen you have a choice to fight or spare your opponents life. You can make friends with any opponent you fight, this makes for a really intresting play concept.</p>
+    </ol>
     </div>
     <div id="Characters">
       <h1>Some of my favorite characters:</h1>
-      <h2>Papyrus:</h2>
-      <img src="media\papyrus.gif">
-      <p style="float: left;">We first meet this skeleton in the snowy slopes of Snowdin and he is intent on capturing <br> a human in order to be a part of the Royal Guard so that he can finally be <br>popular and have friends.</p>
-      <h2>Undyne:</h2>
-      <img src="media\Undyne.png" width=100px">
-      <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of<br> armor, she pursues the protagonist through the entirety of Waterfall a city <br>in the world of undertale</p>
-      <h2>Nabstablook:</h2>
-      <img src="media\Nabstatwo.png">
-      <p style="float: left;">Nabstablook is a sad ghost that can be found in the RUINs and in Waterfall.<br>He's super nice and very intresting to hang out with. He also cries acid tears <br>and of course can't be killed.</p>
-    </div>
+      <ul>
+        <li><h2>Papyrus:</h2></li>
+        <img src="media\papyrus.gif">
+        <p style="float: left;">We first meet this skeleton in the snowy slopes of Snowdin and he is intent on capturing <br> a human in order to be a part of the Royal Guard so that he can finally be <br>popular and have friends.</p>
+        <li><h2>Undyne:</h2></li>
+        <img src="media\Undyne.png" width=100px">
+        <p style="float: left;">Undyne is a fish-like monster that leads the Royal Guard. Clad in her full suit of<br> armor, she pursues the protagonist through the entirety of Waterfall a city <br>in the world of undertale</p>
+        <li><h2>Nabstablook:</h2></li>
+        <img src="media\Nabstatwo.png">
+        <p style="float: left;">Nabstablook is a sad ghost that can be found in the RUINs and in Waterfall.<br>He's super nice and very intresting to hang out with. He also cries acid tears <br>and of course can't be killed.</p>
+    </ul>
+  </div>
     <div class="border">
       <br>
       <p align=center>Want to see more of what <span style="color: red">UNDERTALE</span> looks like? Click <a href="media.html" style="color: yellow">HERE</a> to see some more pictures and videos of <span style="color:red">UNDERTALE</span></p>
