--- a/media.html
+++ b/media.html
@@ -1,27 +1,53 @@
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>UNDERTALE Media</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="undernetbody">
-    <nav>
-      <a href="index.html">Home</a> |
-      <a href="contact.html">Contact</a> |
-    </nav>
+    <nav><a href="index.html">Home</a> | <a href="contact.html">Contact</a> |</nav>
     <h1 class="yellow" align="center">See the Trailer of Undertale:</h1>
     <div class="border">
       <center>
-        <video video controls autoplay>
-          <source src="media/undertaletrailer.mp4" type="video/mp4">
+        <video video controls>
+          <source src="media/undertaletrailer.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
       </center>
     </div>
-	<h3>Just a regular boss fight in the world of <span style="color: red">UNDERTALE</span>...</h3>
-	  <iframe width="560" height="315" src="https://www.youtube.com/embed/8jmptY4uCkk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<h3 align="right">Here is a video showcasing some of the RUINs, <br>an ancient place in UNDERTALE</h3>
-	<iframe align="right" width="560" height="315" src="https://www.youtube.com/embed/r3yrAy0ffNo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <!--5 videos can be found here...-->
+    <div id="mainvids" style="padding: 100px;">
+      <h3>Just a regular boss fight in the world of <span style="color: red;">UNDERTALE</span>...</h3>
+      <iframe width="560" height="315"src="https://www.youtube.com/embed/8jmptY4uCkk"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h3 align="right">
+        Here is a video showcasing some of the RUINs, <br>
+        an ancient place in UNDERTALE
+      </h3>
+      <iframe align="right" width="560" height="315" src="https://www.youtube.com/embed/r3yrAy0ffNo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <br>
+      <h3 align="left">Encounters with the actor robot Mettaton:</h3>
+      <iframe align="left" width="560" height="315" src="https://www.youtube.com/embed/W4wjfmVNpBw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <!--I'm sure it's not good practice, but for some reasons my videos just wern't breaking up, and this was the only way it worked for me-->
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <h3 align="right">Each run of UNDERTALE is a little different... Here are some random events that can occur:</h3>
+      <iframe align="right" width="560" height="315" src="https://www.youtube.com/embed/55jt23G3xqc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <!--The 5 links can be found here...-->
+    <h2 align="center">Want to see more of undertale? Try some of these official UNDERTALE platforms:</h2>
+    <div>
+      <h4 align="center">
+        <a class="blue" href="https://twitter.com/UNDERTALE">Twitter </a>
+        |
+        <a class="blue" href="https://www.youtube.com/c/UNDERTALEOfficial">YouTube </a>
+        |
+        <a class="blue" href="https://store.steampowered.com/app/391540">Steam </a>
+        |
+        <a class="blue" href="https://www.deltarune.com">DeltaRune, the newest UNDERTALE game </a>
+        |
+        <a class="blue" href="https://www.undertale.com">UNDERTALE offical site</a>
+      </h4>
+    </div>
   </body>
 </html>
